# GLM_Benchmark

./: .gitignore  README.md  environment.yml
Exp1_Public-dataset-bench/finetune/: pyproject.toml
Exp1_Public-dataset-bench/finetune/notebooks/: nt_gue_grover_smoke_test.ipynb
Exp1_Public-dataset-bench/finetune/scripts/: run_matrix.sh
Exp1_Public-dataset-bench/finetune/src/glm_finetune/: models.py  paths.py
Exp2_Motif-Interpretability-Analysis/: .gitignore  data_sources.md  pyproject.toml
Exp2_Motif-Interpretability-Analysis/notebook/: ctcf_nt_attention_discovery_demo.ipynb  ctcf_nt_motif_attention_enrichment_demo.ipynb  ctcf_nt_preprocess_demo.ipynb
Exp2_Motif-Interpretability-Analysis/scripts/: 00_run_preprocess.sh  01_run_finetune_bpe.sh  02_run_finetune_nt.sh  03_run_fimo.sh  04_run_motif_mapping.sh  05_run_attention_stats.sh  06_run_discovery.sh  07_run_visualization.sh
Exp2_Motif-Interpretability-Analysis/src/exp2_attention/: __init__.py  paths.py
Exp2_Motif-Interpretability-Analysis/src/exp2_attention/attention/: __init__.py  build_attention_scores_from_parquet.py  extract_bpe_attention.py  extract_nt_attention.py
Exp2_Motif-Interpretability-Analysis/src/exp2_attention/discovery/: __init__.py  build_tfmodisco_inputs_bpe.py  expand_nt_attention_to_tfmodisco.py  (+4 more)
Exp3_DNase-based-Multimodal-Extension/: pyproject.toml
Exp3_DNase-based-Multimodal-Extension/notebooks/: 01_data_preparation.ipynb
Exp3_DNase-based-Multimodal-Extension/scripts/: 00_prepare_dnase_bins.sh  01_create_datasets.sh  02_merge_datasets.sh  03_finetune_basic.sh  08_plot_auprc.sh
(+51 files in other folders)
