[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glm-benchmark-exp2-attention"
version = "0.1.0"
description = "Experiment 2 TFBS attention-weight analysis and motif discovery utilities."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
